# TP_SEPC_1

./: .gitignore  CMakeLists.txt  README.md
gtest/: README.md
shell/: README.md  alloc.i  pyallocphy.i
src/: CMakeLists.txt  alloctest.cc  mem.c  mem.h  memshell.c  variante.h  variante.h.in
tests/: test_bf.c  test_bf.cc  test_bf.h  test_buddy.c  test_buddy.cc  test_cff.c  test_cff.cc  test_cff.h  test_generic.c  test_generic.cc  test_run.H  test_run_cpp.cc  test_run_cpp.h
